# jemu65c02

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake
include/jemu65c02/: function_decl.h  jemu65c02.h  macro_tricks.h  status.h
src/: instructions.c  j65c02_compare.c  j65c02_crash_flag_get.c  j65c02_create.c  j65c02_cycle_delta_get.c  j65c02_cycle_delta_set.c  j65c02_emulation_mode_get.c  j65c02_fetch.c  j65c02_inst_ADC_abs.c  j65c02_inst_ADC_abs_x.c  j65c02_inst_ADC_abs_y.c  j65c02_inst_ADC_imm.c  j65c02_inst_ADC_zer.c  j65c02_inst_ADC_zer_idr.c  j65c02_inst_ADC_zer_x.c  j65c02_inst_ADC_zer_x_idr.c  j65c02_inst_ADC_zer_y_idr.c  j65c02_inst_AND_abs.c  j65c02_inst_AND_abs_x.c  j65c02_inst_AND_abs_y.c  j65c02_inst_AND_imm.c  j65c02_inst_AND_zer.c  j65c02_inst_AND_zer_idr.c  j65c02_inst_AND_zer_x.c  j65c02_inst_AND_zer_x_idr.c  j65c02_inst_AND_zer_y_idr.c  j65c02_inst_ASL_a.c  j65c02_inst_ASL_abs.c  j65c02_inst_ASL_abs_x.c  j65c02_inst_ASL_zer.c  j65c02_inst_ASL_zer_x.c  j65c02_inst_BCC.c  j65c02_inst_BCS.c  j65c02_inst_BEQ.c  j65c02_inst_BIT_abs.c  j65c02_inst_BIT_abs_x.c  j65c02_inst_BIT_imm.c  j65c02_inst_BIT_zer.c  j65c02_inst_BIT_zer_x.c  j65c02_inst_BMI.c  (+187 more)
test/: test_ADC_abs.cpp  test_ADC_abs_x.cpp  test_ADC_abs_y.cpp  test_ADC_imm.cpp  test_ADC_zer.cpp  test_ADC_zer_idr.cpp  test_ADC_zer_x.cpp  test_ADC_zer_x_idr.cpp  test_ADC_zer_y_idr.cpp  test_AND_abs.cpp  test_AND_abs_x.cpp  test_AND_abs_y.cpp  test_AND_imm.cpp  test_AND_zer.cpp  test_AND_zer_idr.cpp  test_AND_zer_x.cpp  test_AND_zer_x_idr.cpp  test_AND_zer_y_idr.cpp  test_ASL_a.cpp  test_ASL_abs.cpp  test_ASL_abs_x.cpp  test_ASL_zer.cpp  test_ASL_zer_x.cpp  test_BCC.cpp  test_BCS.cpp  test_BEQ.cpp  test_BIT_abs.cpp  test_BIT_abs_x.cpp  test_BIT_imm.cpp  test_BIT_zer.cpp  test_BIT_zer_x.cpp  test_BMI.cpp  test_BNE.cpp  test_BPL.cpp  test_BRA.cpp  test_BRK.cpp  test_BVC.cpp  test_BVS.cpp  test_CLC.cpp  test_CLD.cpp  (+160 more)
